Show most important features first in readme

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
    "name": "fetch-json",
-   "description": "A wrapper around Fetch just for JSON (written in TypeScript)",
+   "description": "A wrapper around Fetch just for JSON",
    "version": "3.0.3",
    "license": "MIT",
    "type": "module",
@@ -93,25 +93,25 @@
    },
    "devDependencies": {
       "@fortawesome/fontawesome-free": "~6.3",
-      "@types/node": "~18.13",
-      "@typescript-eslint/eslint-plugin": "~5.51",
-      "@typescript-eslint/parser": "~5.51",
-      "add-dist-header": "~0.3",
+      "@types/node": "~18.14",
+      "@typescript-eslint/eslint-plugin": "~5.53",
+      "@typescript-eslint/parser": "~5.53",
+      "add-dist-header": "~1.0",
       "assert-deep-strict-equal": "~1.0",
-      "copy-file-util": "~0.1",
-      "copy-folder-util": "~0.2",
+      "copy-file-util": "~1.0",
+      "copy-folder-util": "~1.0",
       "dna-engine": "~2.3",
-      "eslint": "~8.33",
+      "eslint": "~8.34",
       "esm-to-plain-js": "~0.1",
       "jquery": "~3.6",
       "jsdom": "~21.1",
       "jshint": "~2.13",
       "mocha": "~10.2",
-      "puppeteer": "19.5",
-      "puppeteer-browser-ready": "~0.5",
-      "replacer-util": "~0.3",
+      "puppeteer": "19.7",
+      "puppeteer-browser-ready": "~1.0",
+      "replacer-util": "~1.0",
       "rimraf": "3",
-      "run-scripts-util": "~0.1",
+      "run-scripts-util": "~1.0",
       "typescript": "~4.9",
       "uglify-js": "~3.17",
       "w3c-html-validator": "~1.3",
