--- a/package.json
+++ b/package.json
@@ -90,32 +90,32 @@
    },
    "scripts": {
       "pretest": "run-scripts clean build",
-      "test": "mocha spec/*.spec.js --timeout 5000 --retries 1",
+      "test": "mocha spec/*.spec.js --timeout 5000",
       "examples": "node docs/js/examples.js",
       "dev": "tsc && node docs/js/dev.js",
       "interactive": "http-server -o spec/fixtures/"
    },
    "devDependencies": {
       "@fortawesome/fontawesome-free": "~6.4",
-      "@types/node": "~18.15",
-      "@typescript-eslint/eslint-plugin": "~5.57",
-      "@typescript-eslint/parser": "~5.57",
+      "@types/node": "~20.1",
+      "@typescript-eslint/eslint-plugin": "~5.59",
+      "@typescript-eslint/parser": "~5.59",
       "add-dist-header": "~1.0",
       "assert-deep-strict-equal": "~1.0",
       "copy-file-util": "~1.0",
       "copy-folder-util": "~1.0",
       "dna-engine": "~2.3",
-      "eslint": "~8.37",
+      "eslint": "~8.40",
       "esm-to-plain-js": "~1.0",
       "http-server": "~14.1",
       "jquery": "~3.6",
-      "jsdom": "~21.1",
+      "jsdom": "~22.0",
       "jshint": "~2.13",
       "mocha": "~10.2",
-      "puppeteer": "~19.8",
-      "puppeteer-browser-ready": "~1.0",
+      "puppeteer": "~20.1",
+      "puppeteer-browser-ready": "~1.1",
       "replacer-util": "~1.0",
-      "rimraf": "~4.4",
+      "rimraf": "~5.0",
       "run-scripts-util": "~1.1",
       "typescript": "~5.0",
       "uglify-js": "~3.17",
