--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
    "engines": {
       "node": ">=18"
    },
-   "repository": "github:center-key/fetch-json",
+   "repository": {
+      "type": "git",
+      "url": "git+https://github.com/center-key/fetch-json.git"
+   },
    "homepage": "https://fetch-json.js.org",
    "bugs": "https://github.com/center-key/fetch-json/issues",
    "docs": "https://github.com/center-key/fetch-json#readme",
@@ -101,28 +104,28 @@
    },
    "devDependencies": {
       "@fortawesome/fontawesome-free": "~6.4",
-      "@types/node": "~20.5",
-      "@typescript-eslint/eslint-plugin": "~6.5",
-      "@typescript-eslint/parser": "~6.5",
-      "add-dist-header": "~1.2",
+      "@types/node": "~20.6",
+      "@typescript-eslint/eslint-plugin": "~6.7",
+      "@typescript-eslint/parser": "~6.7",
+      "add-dist-header": "~1.3",
       "assert-deep-strict-equal": "~1.1",
       "copy-file-util": "~1.1",
       "copy-folder-util": "~1.1",
       "dna-engine": "~3.0",
-      "eslint": "~8.48",
+      "eslint": "~8.50",
       "esm-to-plain-js": "~1.1",
       "http-server": "~14.1",
       "jsdom": "~22.1",
       "jshint": "~2.13",
       "mocha": "~10.2",
-      "puppeteer": "~21.1",
-      "puppeteer-browser-ready": "~1.2",
+      "puppeteer": "~21.3",
+      "puppeteer-browser-ready": "~1.3",
       "replacer-util": "~1.2",
       "rimraf": "~5.0",
       "run-scripts-util": "~1.2",
       "typescript": "~5.2",
       "uglify-js": "~3.17",
-      "w3c-html-validator": "~1.4",
+      "w3c-html-validator": "~1.5",
       "web-ignition": "~2.0",
       "whatwg-fetch": "~3.6"
    }
