--- a/package.json
+++ b/package.json
@@ -92,7 +92,7 @@
       ],
       "dist": [
          "add-dist-header build dist",
-         "html-validator"
+         "html-validator spec docs"
       ]
    },
    "scripts": {
@@ -104,9 +104,9 @@
    },
    "devDependencies": {
       "@fortawesome/fontawesome-free": "~6.4",
-      "@types/node": "~20.8",
-      "@typescript-eslint/eslint-plugin": "~6.9",
-      "@typescript-eslint/parser": "~6.9",
+      "@types/node": "~20.9",
+      "@typescript-eslint/eslint-plugin": "~6.10",
+      "@typescript-eslint/parser": "~6.10",
       "add-dist-header": "~1.3",
       "assert-deep-strict-equal": "~1.1",
       "copy-file-util": "~1.1",
@@ -125,7 +125,7 @@
       "run-scripts-util": "~1.2",
       "typescript": "~5.2",
       "uglify-js": "~3.17",
-      "w3c-html-validator": "~1.5",
+      "w3c-html-validator": "~1.6",
       "web-ignition": "~2.0",
       "whatwg-fetch": "~3.6"
    }
