--- a/package.json
+++ b/package.json
@@ -5,19 +5,12 @@
    "license": "MIT",
    "type": "module",
    "module": "dist/fetch-json.js",
-   "jsdelivr": "dist/fetch-json.min.js",
-   "main": "dist/fetch-json.umd.cjs",
+   "browser": "dist/fetch-json.min.js",
    "types": "dist/fetch-json.d.ts",
+   "exports": "./dist/fetch-json.js",
    "files": [
       "dist"
    ],
-   "exports": {
-      ".": {
-         "import": "./dist/fetch-json.js",
-         "require": "./dist/fetch-json.umd.cjs"
-      },
-      "./": "./dist/"
-   },
    "engines": {
       "node": ">=18"
    },
@@ -85,8 +78,6 @@
       ],
       "build": [
          "tsc",
-         "tsc --module UMD --outDir build/umd",
-         "copy-file build/umd/fetch-json.js build/fetch-json.umd.cjs",
          "esm-to-plain-js --cd=build fetch-json.js fetch-json.dev.js",
          "uglifyjs build/fetch-json.dev.js --output build/fetch-json.min.js"
       ],
@@ -104,9 +95,9 @@
    },
    "devDependencies": {
       "@fortawesome/fontawesome-free": "~6.5",
-      "@types/node": "~20.10",
-      "@typescript-eslint/eslint-plugin": "~6.17",
-      "@typescript-eslint/parser": "~6.17",
+      "@types/node": "~20.11",
+      "@typescript-eslint/eslint-plugin": "~6.19",
+      "@typescript-eslint/parser": "~6.19",
       "add-dist-header": "~1.3",
       "assert-deep-strict-equal": "~1.1",
       "copy-file-util": "~1.1",
@@ -115,10 +106,10 @@
       "eslint": "~8.56",
       "esm-to-plain-js": "~1.1",
       "http-server": "~14.1",
-      "jsdom": "~23.0",
+      "jsdom": "~24.0",
       "jshint": "~2.13",
       "mocha": "~10.2",
-      "puppeteer": "~21.6",
+      "puppeteer": "~21.9",
       "puppeteer-browser-ready": "~1.3",
       "replacer-util": "~1.2",
       "rimraf": "~5.0",
