--- a/package.json
+++ b/package.json
@@ -95,28 +95,28 @@
    },
    "devDependencies": {
       "@fortawesome/fontawesome-free": "~6.5",
-      "@types/node": "~20.11",
-      "@typescript-eslint/eslint-plugin": "~7.3",
-      "@typescript-eslint/parser": "~7.3",
+      "@types/node": "~20.12",
+      "@typescript-eslint/eslint-plugin": "~7.9",
+      "@typescript-eslint/parser": "~7.9",
       "add-dist-header": "~1.4",
       "assert-deep-strict-equal": "~1.2",
       "copy-file-util": "~1.2",
       "copy-folder-util": "~1.1",
-      "dna-engine": "~3.1",
-      "eslint": "~8.57",
+      "dna-engine": "~3.2",
+      "eslint": "8.57.0",
       "esm-to-plain-js": "~1.1",
       "http-server": "~14.1",
       "jsdom": "~24.0",
       "jshint": "~2.13",
-      "mocha": "~10.3",
-      "puppeteer": "~22.6",
+      "mocha": "~10.4",
+      "puppeteer": "~22.8",
       "puppeteer-browser-ready": "~1.3",
-      "replacer-util": "~1.2",
+      "replacer-util": "~1.3",
       "rimraf": "~5.0",
       "run-scripts-util": "~1.2",
       "typescript": "~5.4",
       "uglify-js": "~3.17",
-      "w3c-html-validator": "~1.7",
+      "w3c-html-validator": "~1.8",
       "web-ignition": "~2.1",
       "whatwg-fetch": "~3.6"
    }
