--- a/package.json
+++ b/package.json
@@ -11,9 +11,6 @@
    "files": [
       "dist"
    ],
-   "engines": {
-      "node": ">=18"
-   },
    "repository": {
       "type": "git",
       "url": "git+https://github.com/center-key/fetch-json.git"
@@ -94,10 +91,9 @@
       "interactive": "http-server -o spec/fixtures/"
    },
    "devDependencies": {
+      "@eslint/js": "~9.3",
       "@fortawesome/fontawesome-free": "~6.5",
       "@types/node": "~20.12",
-      "@typescript-eslint/eslint-plugin": "~7.9",
-      "@typescript-eslint/parser": "~7.9",
       "add-dist-header": "~1.4",
       "assert-deep-strict-equal": "~1.2",
       "copy-file-util": "~1.2",
@@ -106,15 +102,16 @@
       "eslint": "8.57.0",
       "esm-to-plain-js": "~1.1",
       "http-server": "~14.1",
-      "jsdom": "~24.0",
+      "jsdom": "~24.1",
       "jshint": "~2.13",
       "mocha": "~10.4",
-      "puppeteer": "~22.8",
+      "puppeteer": "~22.10",
       "puppeteer-browser-ready": "~1.3",
       "replacer-util": "~1.3",
       "rimraf": "~5.0",
       "run-scripts-util": "~1.2",
       "typescript": "~5.4",
+      "typescript-eslint": "~7.11",
       "uglify-js": "~3.17",
       "w3c-html-validator": "~1.8",
       "web-ignition": "~2.1",
