Convert to new flat config for eslint

--- a/package.json
+++ b/package.json
@@ -46,32 +46,13 @@
          "fetch": true
       }
    },
-   "eslintConfig": {
-      "ignorePatterns": [
-         "build",
-         "dist",
-         "node_modules"
-      ],
-      "root": true,
-      "parser": "@typescript-eslint/parser",
-      "plugins": [
-         "@typescript-eslint"
-      ],
-      "extends": [
-         "eslint:recommended",
-         "plugin:@typescript-eslint/recommended"
-      ],
-      "rules": {
-         "@typescript-eslint/no-non-null-assertion": "off"
-      }
-   },
    "runScriptsConfig": {
       "clean": [
          "rimraf build dist"
       ],
       "lint": [
          "jshint . --exclude-path .gitignore",
-         "eslint --max-warnings 0 . --ext .ts"
+         "eslint --max-warnings 0"
       ],
       "build": [
          "tsc",
@@ -91,28 +72,29 @@
       "interactive": "http-server -o spec/fixtures/"
    },
    "devDependencies": {
-      "@eslint/js": "~9.6",
-      "@fortawesome/fontawesome-free": "~6.5",
-      "@types/node": "~20.14",
+      "@eslint/js": "~9.9",
+      "@fortawesome/fontawesome-free": "~6.6",
+      "@types/eslint__js": "~8.42",
+      "@types/node": "~22.2",
       "add-dist-header": "~1.4",
       "assert-deep-strict-equal": "~1.2",
       "copy-file-util": "~1.2",
       "copy-folder-util": "~1.1",
       "dna-engine": "~3.2",
-      "eslint": "8.57.0",
+      "eslint": "~9.9",
       "esm-to-plain-js": "~1.1",
       "http-server": "~14.1",
       "jsdom": "~24.1",
       "jshint": "~2.13",
-      "mocha": "~10.5",
-      "puppeteer": "~22.12",
+      "mocha": "~10.7",
+      "puppeteer": "~23.0",
       "puppeteer-browser-ready": "~1.3",
       "replacer-util": "~1.3",
-      "rimraf": "~5.0",
-      "run-scripts-util": "~1.2",
+      "rimraf": "~6.0",
+      "run-scripts-util": "~1.3",
       "typescript": "~5.5",
-      "typescript-eslint": "~7.14",
-      "uglify-js": "~3.18",
+      "typescript-eslint": "~8.0",
+      "uglify-js": "~3.19",
       "w3c-html-validator": "~1.8",
       "web-ignition": "~2.2",
       "whatwg-fetch": "~3.6"
