--- a/package.json
+++ b/package.json
@@ -56,11 +56,11 @@
       ],
       "build": [
          "tsc",
-         "esm-to-plain-js --cd=build fetch-json.js fetch-json.dev.js",
-         "uglifyjs build/fetch-json.dev.js --output build/fetch-json.min.js"
+         "esm-to-plain-js --cd=build/src fetch-json.js fetch-json.dev.js",
+         "uglifyjs build/src/fetch-json.dev.js --output build/src/fetch-json.min.js"
       ],
       "dist": [
-         "add-dist-header build dist",
+         "add-dist-header build/src dist",
          "html-validator spec docs"
       ]
    },
@@ -72,27 +72,27 @@
       "interactive": "http-server -o spec/fixtures/"
    },
    "devDependencies": {
-      "@eslint/js": "~9.18",
+      "@eslint/js": "~9.21",
       "@fortawesome/fontawesome-free": "~6.7",
-      "@types/node": "~22.10",
+      "@types/node": "~22.13",
       "add-dist-header": "~1.4",
       "assert-deep-strict-equal": "~1.2",
       "copy-file-util": "~1.2",
       "copy-folder-util": "~1.1",
       "dna-engine": "~3.2",
-      "eslint": "~9.18",
+      "eslint": "~9.21",
       "esm-to-plain-js": "~1.1",
       "http-server": "~14.1",
       "jsdom": "~26.0",
       "jshint": "~2.13",
-      "mocha": "~11.0",
-      "puppeteer": "~24.1",
+      "mocha": "~11.1",
+      "puppeteer": "~24.3",
       "puppeteer-browser-ready": "~1.3",
       "replacer-util": "~1.3",
       "rimraf": "~6.0",
       "run-scripts-util": "~1.3",
       "typescript": "~5.7",
-      "typescript-eslint": "~8.20",
+      "typescript-eslint": "~8.25",
       "uglify-js": "~3.19",
       "w3c-html-validator": "~1.8",
       "web-ignition": "~2.3",
