--- a/package.json
+++ b/package.json
@@ -66,33 +66,33 @@
    },
    "scripts": {
       "pretest": "run-scripts clean lint build dist",
-      "test": "mocha spec/*.spec.js --timeout 7000",
+      "test": "mocha spec --timeout 7000",
       "examples": "node docs/js/examples.js",
       "dev": "tsc && node docs/js/dev.js",
       "interactive": "http-server -o spec/fixtures/"
    },
    "devDependencies": {
-      "@eslint/js": "~9.34",
+      "@eslint/js": "~9.36",
       "@fortawesome/fontawesome-free": "~7.0",
-      "@types/node": "~24.3",
+      "@types/node": "~24.5",
       "add-dist-header": "~1.5",
       "assert-deep-strict-equal": "~1.2",
       "copy-file-util": "~1.3",
       "copy-folder-util": "~1.1",
       "dna-engine": "~3.3",
-      "eslint": "~9.34",
+      "eslint": "~9.36",
       "esm-to-plain-js": "~1.1",
       "http-server": "~14.1",
-      "jsdom": "~26.1",
+      "jsdom": "~27.0",
       "jshint": "~2.13",
       "mocha": "~11.7",
-      "puppeteer": "~24.17",
+      "puppeteer": "~24.22",
       "puppeteer-browser-ready": "~1.3",
       "replacer-util": "~1.4",
       "rimraf": "~6.0",
       "run-scripts-util": "~1.3",
       "typescript": "~5.9",
-      "typescript-eslint": "~8.40",
+      "typescript-eslint": "~8.44",
       "uglify-js": "~3.19",
       "w3c-html-validator": "~1.9",
       "web-ignition": "~2.4",
