Move html validation to prevent blocking mocha

--- a/.github/workflows/run-spec-on-push.yaml
+++ b/.github/workflows/run-spec-on-push.yaml
@@ -8,8 +8,10 @@ jobs:
     # Error: Failed to launch the browser process! No usable sandbox!
     # https://issues.chromium.org/issues/373753919
     runs-on: ubuntu-22.04
+    env:
+      w3cHtmlValidator: dry-run  #only run html validation locally
     steps:
-      - uses: actions/checkout@v4    #see: https://github.com/actions/checkout/releases
+      - uses: actions/checkout@v5    #see: https://github.com/actions/checkout/releases
       - uses: actions/setup-node@v4  #see: https://github.com/actions/setup-node/releases
       - run: npm install
       - run: npm test
