--- a/package.json
+++ b/package.json
@@ -78,15 +78,15 @@
       "interactive": "http-server -o spec/fixtures/"
    },
    "devDependencies": {
-      "@eslint/js": "~9.39",
+      "@eslint/js": "~10.0",
       "@fortawesome/fontawesome-free": "~7.2",
       "@types/node": "~25.3",
       "add-dist-header": "~1.6",
       "assert-deep-strict-equal": "~1.2",
       "copy-file-util": "~1.3",
       "copy-folder-util": "~1.2",
-      "dna-engine": "~3.3",
-      "eslint": "~9.39",
+      "dna-dom": "~3.3",
+      "eslint": "~10.0",
       "esm-to-plain-js": "~1.2",
       "http-server": "~14.1",
       "jsdom": "~28.1",
